--- a/.gitignore
+++ b/.gitignore
@@ -22,6 +22,12 @@ build/Release
 # Dependency directory
 node_modules
 
+# npm Components (Installed Automatically)
+themes/default/public/lib/
+
 # Misc
 *.pages
 *.pdf
+.DS_Store
+
+.idea
