--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "raneto",
-  "version": "0.6.0",
+  "version": "0.11.0",
   "description": "Markdown powered Knowledgebase",
   "author": "Gilbert Pellegrom <gilbert@pellegrom.me>",
   "license": "MIT",
@@ -14,40 +14,74 @@
     "url": "https://github.com/gilbitron/Raneto.git"
   },
   "bugs": "https://github.com/gilbitron/Raneto/issues",
-  "contributors": "https://github.com/gilbitron/Raneto/graphs/contributors",
+  "contributors": [ "https://github.com/gilbitron/Raneto/graphs/contributors" ],
   "licenses": [
     {
       "type": "MIT",
       "url": "https://raw.githubusercontent.com/gilbitron/Raneto/master/LICENSE"
     }
   ],
+  "bin": "./bin/raneto",
   "main": "./app",
   "scripts": {
-    "start": "node ./bin/www"
+    "start": "DEBUG=raneto node example/server.js",
+    "start_win": "set DEBUG=raneto&&node example/server.js",
+    "test": "npm run lint & npm run compile & mocha --reporter spec test/*.js",
+    "postinstall": "npm update && npm run gulp",
+    "gulp": "gulp",
+    "compile": "babel app/core/src --out-dir app/core/lib",
+    "lint": "jshint app/**/*.js test/*.js",
+    "prepublish": "npm run compile"
   },
   "engines": {
-    "node": "~0.10.0"
+    "node": ">=4.0.0"
   },
   "dependencies": {
-    "body-parser": "~1.0.0",
-    "cookie-parser": "~1.0.1",
-    "debug": "~0.7.4",
-    "express": "~4.2.0",
-    "extend": "^1.2.1",
-    "glob": "^4.0.0",
+    "always-tail": "^0.2.0",
+    "body-parser": "^1.15.2",
+    "bootstrap": "^3.3.7",
+    "bootstrap-rtl": "^3.3.4",
+    "commander": "^2.9.0",
+    "cookie-parser": "^1.4.3",
+    "debug": "^2.2.0",
+    "express": "^4.14.0",
+    "express-session": "^1.14.1",
+    "extend": "^3.0.0",
+    "fitvids": "^2.0.0",
+    "glob": "^7.0.6",
+    "gulp": "^3.9.1",
+    "gulp-shell": "^0.5.2",
+    "highlightjs": "^8.7.0",
     "hogan-express": "^0.5.2",
-    "lunr": "^0.5.3",
-    "marked": "^0.3.2",
-    "moment": "^2.6.0",
-    "morgan": "~1.0.0",
-    "raneto-core": "0.x",
-    "static-favicon": "~1.0.0",
-    "underscore": "^1.6.0",
-    "underscore.string": "^2.3.3",
-    "validator": "^3.13.0",
-    "doctoc": "latest",
-    "gulp": "latest",
-    "gulp-doctoc": "latest",
-    "gulp-marked": "latest"
+    "jquery": "^2.2.4",
+    "jquery.backstretch": "^2.1.13",
+    "js-yaml": "^3.6.1",
+    "lunr": "^0.7.1",
+    "markdown-toc": "^0.12.16",
+    "marked": "^0.3.6",
+    "masonry-layout": "3.3.2",
+    "moment": "^2.14.1",
+    "morgan": "^1.7.0",
+    "passport": "^0.3.2",
+    "passport-google-oauth20": "^1.0.0",
+    "pm2": "^1.1.3",
+    "sanitize-filename": "^1.6.0",
+    "serve-favicon": "^2.3.0",
+    "sitemap": "^1.8.1",
+    "sweetalert": "^1.1.3",
+    "underscore": "^1.8.3",
+    "underscore.string": "^3.3.4",
+    "validator": "^5.6.0"
+  },
+  "devDependencies": {
+    "babel-cli": "^6.14.0",
+    "babel-plugin-add-module-exports": "^0.2.1",
+    "babel-plugin-transform-object-assign": "^6.8.0",
+    "babel-preset-es2015": "^6.14.0",
+    "babel-register": "^6.14.0",
+    "chai": "3.5.0",
+    "jshint": "^2.9.3",
+    "mocha": "^3.0.2",
+    "supertest": "^2.0.0"
   }
 }
